--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,18 @@
 {
     "name": "nickcheek/atdconnect",
-    "description": "API Wrapper for ATD Connect",
-    "keywords": [
-        "nickcheek",
-        "atdconnect"
-    ],
-    "homepage": "https://github.com/nickcheek/atdconnect",
-    "license": "MIT License (MIT)",
-    "type": "library",
+    "description": "API Wrapper for ATD",
     "authors": [
         {
-            "name": "Nicholas Cheek",
-            "email": "nick@nicholascheek.com",
-            "role": "Developer"
+            "name": "Nick",
+            "email": "nick@nicholascheek.com"
         }
     ],
-    "require": {
-        "php": "^7.1"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^7.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Nickcheek\\Atdconnect\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Nickcheek\\Atdconnect\\Tests\\": "tests"
-        }
-    },
-    "scripts": {
-        "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
-    },
-    "config": {
-        "sort-packages": true
+    "minimum-stability": "dev",
+    "require": {},
+    "autoload" : {
+	    "psr-4":{
+		    "Nickcheek\\Atdconnect\\": "src/"
+	    }
     }
+
 }
